tests/integration/features/commands/server/validation/malformed_host/test.itest
RUN: %mkdir %S/output/
RUN: %expect_exit 1 %strictdoc server --host foo#bar . | filecheck %s --dump-input=fail

CHECK: error: Provided 'host' argument is not a valid host: foo#bar
